# turkish-utils

./: README.md  pyproject.toml  test.py
src/turkish_utils/: __init__.py
